fix: suppress JLine native access warning on Java 21+
Auto-relaunches CLI with --enable-native-access=ALL-UNNAMED if not
already set, same pattern as nimbus-core. Eliminates the JLine
JLineNativeLoader warning on startup.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>